# ny_next-tauri-bun

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.base  LICENSE  bun.lockb  next.config.ts  package.json  tsconfig.json
.infra/chart/: Chart.yaml
.infra/chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
.infra/chart/templates/tests/: test-connection.yaml
.infra/charts/: Chart.yaml
.infra/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
