[package]
name = "next-tauri-bun"
version = "1.0.0"
description = "A versatile, cross-platform application crafted using Next.js, Tauri, and Bun, designed for multi-architecture compatibility"
authors = ["Dimas Yudha Pratama"]
license = "MIT"
repository = "https://github.com/pingdimasyudha/ny_next-tauri-bun"
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
